[project]
name = "sandybox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.25.0",
    "podman>=5.6.0",
]

[project.scripts]
sandybox = "sandybox.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
